--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
 <div id="letterbox">
 <div id="centerbox">
-<img src="letter_images/sliceC.png" width="1150" id="c" alt="C">
-<img src="letter_images/sliceD.png" width="300" id="d" alt="D">
-<img src="letter_images/sliceE.png" width="360" id="e" alt="">
-<img src="letter_images/sliceJ.png" width="150" id="j" alt="J">
-<img src="letter_images/sliceJtransp.png" width="530" height="650" id="jt" alt="">
-<img src="letter_images/sliceDtransp.png" width="500" id="dt" alt="">
-<img src="letter_images/sliceEtransp.png" width="420" id="et" alt="">
-<img src="letter_images/slice4transp.png" width="880" height="300" id="dblug_t" alt="">
-<img src="letter_images/slice5transp.png" width="470" height="1100" id="lblug_t" alt="">
+<img src="letter_images/sliceC.png" width="920" id="c" alt="C">
+<img src="letter_images/sliceD.png" width="240" id="d" alt="D">
+<img src="letter_images/sliceE.png" width="288" id="e" alt="">
+<img src="letter_images/sliceJ.png" width="120" id="j" alt="J">
+<img src="letter_images/sliceJtransp.png" width="424" height="480" id="jt" alt="">
+<img src="letter_images/sliceDtransp.png" width="380" id="dt" alt="">
+<img src="letter_images/sliceEtransp.png" width="336" id="et" alt="">
+<img src="letter_images/slice4transp.png" width="1100" height="240" id="dblug_t" alt="">
+<img src="letter_images/slice5transp.png" width="376" height="900" id="lblug_t" alt="">
 </div>
 </div>
 
@@ -59,6 +59,12 @@
 </div>
 
 </div>
+
+<div class="extra1"></div>
+<div class="extra2"></div>
+<div class="extra3"></div>
+<div class="extra4"></div>
+<div class="extra5"></div>
 
 </body>
 
