--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <img src="letter_images/sliceJtransp.png" width="35%" height="480" id="jt" alt="">
 <img src="letter_images/sliceDtransp.png" width="32%" id="dt" alt="">
 <img src="letter_images/sliceEtransp.png" width="28%" id="et" alt="">
-<img src="letter_images/slice4transp.png" width="90%" height="28%" id="dblug_t" alt="">
+<!--<img src="letter_images/slice4transp.png" width="90%" height="28%" id="dblug_t" alt="">-->
 <img src="letter_images/slice5transp.png" width="376" height="1000" id="lblug_t" alt="">
 </div>
 </div>
