--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <img src="letter_images/sliceDtransp.png" width="30%" id="dt" alt="">
 <img src="letter_images/sliceEtransp.png" width="28%" id="et" alt="">
 <!--<img src="letter_images/slice4transp.png" width="90%" height="28%" id="dblug_t" alt=""-->
-<img src="letter_images/slice5transp.png" width="32%" height="900" id="lblug_t" alt="">
+<img src="letter_images/slice5transp.png" width="32%" height="880" id="lblug_t" alt="">
 </div>
-</div>
+</div>8
 
 <div class="colorblocks" id="yellb"></div>
 <div class="colorblocks" id="dblug"></div>
