--- a/index.html
+++ b/index.html
@@ -2,38 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>CERRUTI DESIGN</title>
+    <title>DJC DESIGN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dimistyles.css">
 
 </head>
 
 <body id="home">
-<div class="wrapper">
-<h1>DjCerruti</h1>
+
+<div id="homewrapper">
+
+<!--<img id="bg" src="letter_images/slice2C.png" alt="">-->
+
+
+<!--<img src="letter_images/djcimage4.png" id="djclogo" width="312" height="174" alt="DJC Design" usemap="#djcmap">
+<map id ="djcmap" name="djcmap">
+<area shape="rect" coords ="0,0,312,174" href="index.html" alt="DJC Design">
+</map>-->
+
+<header>
+<div class="banner">
+<h1 class="homelink"><a href="index.html"><span class="binitials">DJC</span><span class="design">DESIGN</span></a></h1>
 
 <nav>
     <ul>
-        <li class="home"><a href="index.html">Home</a></li>
-        <li class="about"><a href="about.html">About Dimitri Cerruti</a></li>
-        <li class="services"><a href="services.html">Services</a></li>
+        <li class="about"><a href="about.html">About</a></li>
+        <li class="gallery"><a href="gallery.html">Gallery</a></li>
         <li class="contact"><a href="contact.html">Contact</a></li>
     </ul>
-</nav>
-
-<div id="letterbox">
-<div id="centerbox">
-<img src="letter_images/sliceC.png" width="70%" id="c" alt="C">
-<img src="letter_images/sliceD.png" width="18%" id="d" alt="D">
-<img src="letter_images/sliceE.png" width="24%" id="e" alt="">
-<img src="letter_images/sliceJ.png" width="10%" id="j" alt="J">
-<img src="letter_images/sliceJtransp.png" width="31%" id="jt" alt="">
-<img src="letter_images/sliceDtransp.png" width="30%" id="dt" alt="">
-<img src="letter_images/sliceEtransp.png" width="28%" id="et" alt="">
-<!--<img src="letter_images/slice4transp.png" width="90%" height="28%" id="dblug_t" alt=""-->
-<img src="letter_images/slice5transp.png" width="32%" height="880" id="lblug_t" alt="">
+</nav> 
 </div>
-</div>8
+</header>
+
+<h2>Creative web renditions by...</h2>
+
+<div id="centerbox">
+<img src="letter_images/sliceC.png" id="c" alt="C">
+<img src="letter_images/sliceC288.png" id="ct" alt="">
+<img src="letter_images/sliceD.png" id="d" alt="D">
+<img src="letter_images/sliceE.png" id="e" alt="">
+<img src="letter_images/sliceJ.png" id="j" alt="J">
+<img src="letter_images/sliceJtransp.png" id="jt" alt="">
+<img src="letter_images/sliceDtransp.png" id="dt" alt="">
+<img src="letter_images/sliceEtransp.png" id="et" alt="">
+<!--img src="letter_images/slice4transp.png" width="90%" height="28%" id="dblug_t" alt=""-->
+<img src="letter_images/slice5transp.png" id="lblug_t" alt="">
+</div>
+
 
 <div class="colorblocks" id="yellb"></div>
 <div class="colorblocks" id="dblug"></div>
@@ -42,29 +57,55 @@
 <div class="colorblocks" id="orang"></div>
 <div class="colorblocks" id="lbrow"></div>
 
-<div id="gallery">
 
-<div id="zen">
-</div>
+ </div>
 
-<div id="travelwiz">
-</div>
 
-<div id="scifi">
-</div>
 
-<div id="homeopathy">
-</div>
 
-</div>
-
-</div>
 
 <div class="extra1"></div>
 <div class="extra2"></div>
 <div class="extra3"></div>
 <div class="extra4"></div>
 <div class="extra5"></div>
+
+<footer>
+    <div class="footersection1">
+    <ul>
+    <li><a href="about.html">Logo Design</a></li>
+    <li><a href="about.html">Wireframes, Mockups & Rapid Prototyping</a></li>
+    </ul>
+    <ul>
+    <li><a href="about.html">WordPress Development & Customization</a></li>
+    <li><a href="about.html">Search Engine Opimization & Marketing</a></li>
+    </ul>
+    <ul>
+    <li><a href="about.html">Digital Imaging</a></li>
+    <li><a href="about.html">Computer Illustration & Design</a></li>
+    </ul>
+    <ul>
+    <li><a href="about.html">Content Writing</a></li>
+    <li><a href="about.html">Digital Video/Audio Production</a></li>
+    </ul>
+    </div>
+    
+    <div class="footersection2">
+    <nav class="nav2">
+        <ul class="nav2ul1">
+            <li class="footernav"><a href="index.html">Home</a></li>
+            <li class="footernav"><a href="about.html">About</a></li>
+        </ul>
+        <ul class="nav2ul2">
+            <li class="footernav"><a href="gallery.html">Gallery</a></li>
+            <li class="footernav"><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    </div>
+
+    <small class="copyrightinfo">&copy;2023 DjCerruti.com&trade;. All rights reserved.</small>
+</footer>
+
 
 </body>
 
