--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>DJC DESIGN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dimistyles.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body id="home">
@@ -22,7 +24,8 @@
 
 <header>
 <div class="banner">
-<h1 class="homelink"><a href="index.html"><span class="binitials">DJC</span><span class="design">DESIGN</span></a></h1>
+<h1 id="logo"><a href="index.html">DJC Design</a></h1>
+<!--<h1 class="homelink"><a href="index.html"><span class="binitials">DJC</span><span class="design">DESIGN</span></a></h1>-->
 
 <nav>
     <ul>
