--- a/about.html
+++ b/about.html
@@ -5,12 +5,15 @@
     <title>About DJC Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dimistyles.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body id="about">
 
-    <h1 class="homelink"><a href="index.html"><span class="binitials">DJC</span><span class="design">DESIGN</span></a></h1>  
+<header>
+    <h1 id="logo"><a href="index.html">DJC Design</a></h1>  
 
     <nav>
         <ul>
@@ -20,6 +23,8 @@
 
         </ul>
     </nav> 
+</header>
+
 <div class="wrapper"> 
         <div class="headline">
         <h2>About</h2>   
