--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,15 @@
     <title>Contact DJC Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dimistyles.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body id="contact">
 
-    <h1 class="homelink"><a href="index.html"><span class="binitials">DJC</span><span class="design">DESIGN</span></a></h1>  
+<header>
+    <h1 id="logo"><a href="index.html">DJC Design</a></h1>  
 
     <nav>
         <ul>
@@ -19,6 +22,7 @@
             <li class="contact"><a href="contact.html">Contact</a></li>
         </ul>
     </nav> 
+</header>
 
     <div class="wrapper">
       <div class="headline">
