--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
 <footer>
     <div class="footersection1">
     <ul>
-    <li><a href="about.html">Logo Design</a></li>
+    <li><a href="about.html">Web Design &amp; Content Creation</a></li>
     <li><a href="about.html">Wireframes, Mockups & Rapid Prototyping</a></li>
     </ul>
     <ul>
     <li><a href="about.html">WordPress Development & Customization</a></li>
     <li><a href="about.html">Search Engine Opimization & Marketing</a></li>
     </ul>
-    <ul>
-    <li><a href="about.html">Digital Imaging</a></li>
-    <li><a href="about.html">Computer Illustration & Design</a></li>
+    <ul>  
+    <li><a href="about.html">Logo Design &amp; Other Asset Creation</a></li>
+    <li><a href="about.html">Digital Imaging &amp; Photo Enhancement</a></li>
     </ul>
     <ul>
-    <li><a href="about.html">Content Writing</a></li>
+    <li><a href="about.html">Computer Illustration & Design</a></li>
     <li><a href="about.html">Digital Video/Audio Production</a></li>
     </ul>
     </div>
