--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <li><a href="about.html">Search Engine Opimization & Marketing</a></li>
     </ul>
     <ul>  
-    <li><a href="about.html">Logo Design &amp; Other Asset Creation</a></li>
+    <li><a href="about.html">Logo &amp; Other Asset Design</a></li>
     <li><a href="about.html">Digital Imaging &amp; Photo Enhancement</a></li>
     </ul>
     <ul>
