--- a/about.html
+++ b/about.html
@@ -87,9 +87,9 @@
 
         <div class="introcolumns">
        
-        <div class="introtopics" id="logo"><h4>Logo Design</h4>
+        <div class="introtopics" id="logodesi"><h4>Logo Design</h4>
             <p>A company logo needs to be versatile, so it can be cast not only on business cards and letterhead, but also on mugs, T-shirts, and billboards.</p>
-            <img src="letter_images/CerrutiD_Proj2_BusinessCard_FINAL Composite.pdf" id="svelte" width=525 alt="sample logo design">
+            <!--<div id="svelte"></div>--><img src="letter_images/CerrutiD_BusinessCard_FINAL.jpg" id="svelte" width=525 alt="sample logo design">
             <p id="accomplish">We accomplish this by using <em>scalable</em> vector graphics to render the logo, saving it as a master .svg file that you'll have ready to establish and maintain your company's brand&mdash;anytime, anywhere, and on anything.</p>
             </div>
 
