--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body id="home">
 
-<div id="homewrapper">
+
 
 <!--<img id="bg" src="letter_images/slice2C.png" alt="">-->
 
@@ -36,6 +36,8 @@
 </nav> 
 </div>
 </header>
+
+<div id="homewrapper"></div>
 
 <h2>Creative web renditions by...</h2>
 
@@ -89,7 +91,7 @@
     </ul>
     <ul>
     <li><a href="about.html">Computer Illustration & Design</a></li>
-    <li><a href="about.html">Digital Video/Audio Production</a></li>
+    <li><a href="about.html">Digital Audio/Video Production</a></li>
     </ul>
     </div>
     
