--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 <footer>
     <div class="footersection1">
     <ul>
-    <li><a href="about.html">Web Design &amp; Content Creation</a></li>
-    <li><a href="about.html">Wireframes, Mockups & Rapid Prototyping</a></li>
+    <li><a href="about.html" id="webd">Web Design &amp; Content Creation</a></li>
+    <li><a href="about.html" id="wiref">Wireframes, Mockups & Rapid Prototyping</a></li>
     </ul>
     <ul>
     <li><a href="about.html">WordPress Development & Customization</a></li>
@@ -92,8 +92,8 @@
     <li><a href="about.html">Digital Imaging &amp; Photo Enhancement</a></li>
     </ul>
     <ul>
-    <li><a href="about.html">Computer Illustration & Design</a></li>
-    <li><a href="about.html">Digital Audio/Video Production</a></li>
+    <li><a href="about.html" id="compi">Computer Illustration & Design</a></li>
+    <li><a href="about.html" id="diga">Digital Audio/Video Production</a></li>
     </ul>
     </div>
     
