--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>DJC DESIGN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="DJC Web Design provides web design and development, logo design, and digital imaging, illustration, and video production services. Whether structuring content with HTML and styling its presentation with CSS, fostering site interactivity with JavaScript, and/or incoporating WordPress development for its administrative convenience, DJC Design services can extend your business' reach across the web.">
     <link rel="stylesheet" href="dimistyles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
