--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <li class="contact"><a href="contact.html">Contact</a></li>
     </ul>
 </nav> 
+
+<div class="callme">
+    <h3>Call DJC today!</h3>
+    <p>(510) 224-3725</p>
+</div>
+    
 </div>
 
 <h2>Creative web renditions by...</h2>
