--- a/about.html
+++ b/about.html
@@ -20,9 +20,14 @@
             <li class="about"><a href="about.html">About</a></li>
             <li class="gallery"><a href="gallery.html">Gallery</a></li>
             <li class="contact"><a href="contact.html">Contact</a></li>
-
         </ul>
     </nav> 
+
+    <div class="callme">
+        <h3>Call DJC today!</h3>
+        <p>(510) 224-3725</p>
+    </div>
+
 </header>
 
 <div class="wrapper"> 
