--- a/gallery.html
+++ b/gallery.html
@@ -22,6 +22,12 @@
             <li class="contact"><a href="contact.html">Contact</a></li>
         </ul>
     </nav> 
+
+    <div class="callme">
+        <h3>Call DJC today!</h3>
+        <p>(510) 224-3725</p>
+    </div>
+    
 </header>
 
 <div class="wrapper"> 
