--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
 
     <div class="callme">
         <h3>Call DJC today!</h3>
-        <p>(510) 224-3725</p>
+        <p><tel>(510) 224-3725</tel></p>
     </div>
     
 </header>
