--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="callme">
     <h3>Call DJC today!</h3>
-    <p><tel>(510) 224-3725</tel></p>
+     <p><a href="tel:5102243725">(510) 224-3725</a></p>
 </div>
     
 </div>
