--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
         </div>
 
         <div class="introtopics" id="digvid"><h4>Digital Video & Audio Production</h4>
-        <p>Visuals and audio are useful in creating a story about your business that will connect with potential customers, leaving them a more lasting impression of how you can be of service.</p> 
+        <p>Visuals and audio are useful in creating a story about your business that will connect with potential customers, leaving them a more lasting impression of your business and what it has to offer.</p> 
         <img src="letter_images/demodavinci.JPG" id="davinci" width=525 alt="video editing demo">
         <p>DJC Design has the tools and expertise to create quality video and audio productions that will enhance your message and presence on the web.</p>
         </div>
