--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
             </nav>
             </div>
         
-            <small class="copyrightinfo">&copy;2023 DjCerruti.com&trade;. All rights reserved.</small>
+            <small class="copyrightinfo">&copy;2023 DjCerruti.com&#8480;. All rights reserved.</small>
     </footer>
 
 </body>
