--- a/gallery.html
+++ b/gallery.html
@@ -125,7 +125,7 @@
     </nav>
     </div>
 
-    <small class="copyrightinfo">&copy;2023 DjCerruti.com&trade;. All rights reserved.</small>
+    <small class="copyrightinfo">&copy;2023 DjCerruti.com&#8480;. All rights reserved.</small>
 </footer>
 
 </body>
