--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         </div>
   
        <!--<div class="section1">-->
-            <form id="contactform" method="post" action="mailto:dimic.info@gmail.com" enctype="text/plain">
+            <form id="contactform" method="post" action="mailto:dimitri@djcerruti.com" enctype="text/plain">
 
                 <fieldset id="contactus">
             
