--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
                     <div class="contactinput">
                     <label for="email"><strong>Email</strong></label>
-                    <input type="email" name="email" id="email" maxlength="32" pattern="[\w.%+-]+@domain\.com\.ph" placeholder="youremail@domain.com" required>
+                    <input type="email" name="email" id="email" maxlength="32" placeholder="youremail@domain.com" required>
                     </div>
 
                     <div class="contactinput">
