--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         </div>
   
        <!--<div class="section1">-->
-            <form id="contactform" method="post" action="https://formsubmit.co/dimitri@djcerruti.com" enctype="text/plain">
+            <form id="contactform" method="post" action="https://formsubmit.co/5e73cdf398aabb0ec43a7a239bc1b66d" enctype="text/plain">
 
                 <fieldset id="contactus">
             
