--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                     </div>
                     
                     <div> 
-                        <input type="submit" value="Send" class="signup">&nbsp;<input type="reset" value="Reset" class="signup">
+                        <button type="submit" name="submit" class="signup">Send</button>&nbsp;<button type="reset" name="reset" class="signup">Reset</button>
                     </div>
 
                 </fieldset>
