--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 
                     <div class="contactinput">
                     <p id="comments"><strong>Questions or comments?</strong></p>    
-                    <textarea name="comments" rows="4" maxlength="400" placeholder="Max 400 characters"></textarea>  
+                    <textarea name="comments" rows="4" maxlength="400" placeholder="Max 400 characters" required></textarea>  
                     </div>
                     
                     <div> 
