--- a/contact.html
+++ b/contact.html
@@ -46,23 +46,23 @@
                     <legend><strong>Contact</strong></legend>
                    
                     <div class="contactinput">
-                    <label for="name"><strong>Name</strong></label>
-                    <input type="text" name="name" id="name" maxlength="32" placeholder="Max 32 characters" required>
+                    <label for="name" class="form-label"><strong>Name</strong></label>
+                    <input type="text" name="name" class="form-control"  id="name" maxlength="32" placeholder="Max 32 characters" required>
                     </div>
 
                     <div class="contactinput">
-                    <label for="phone"><strong>Phone</strong></label>
-                    <input type="tel" name="phone" id="phone" maxlength="32" placeholder="(###) ###-####" pattern="\(\d{3}\)\s\d{3}-\d{4}" required>
+                    <label for="phone" class="form-label"><strong>Phone</strong></label>
+                    <input type="tel" name="phone" class="form-control"  id="phone" maxlength="32" placeholder="(###) ###-####" pattern="\(\d{3}\)\s\d{3}-\d{4}" required>
                     </div>
 
                     <div class="contactinput">
-                    <label for="email"><strong>Email</strong></label>
-                    <input type="email" name="email" id="email" maxlength="32" placeholder="youremail@domain.com" required>
+                    <label for="email" class="form-label"><strong>Email</strong></label>
+                    <input type="email" name="email" class="form-control"  id="email" maxlength="32"  placeholder="youremail@domain.com" required>
                     </div>
 
                     <div class="contactinput">
-                    <p id="comments"><strong>Questions or comments?</strong></p>    
-                    <textarea name="comments" rows="4" maxlength="400" placeholder="Max 400 characters" required></textarea>  
+                    <label for="comments" class="form-label"><strong>Questions or comments?</strong></label>    
+                    <textarea name="comments" class="form-control"  id="comments" rows="4" maxlength="400" placeholder="Max 400 characters" required></textarea>  
                     </div>
                     
                     <div> 
