--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
   
        <div class="container">
            
-            <form target="_blank" action="https://formsubmit.co/dimitri@djcerruti.com" method="POST">
+            <form target="_blank" action="https://formsubmit.co/5e73cdf398aabb0ec43a7a239bc1b66d" method="POST">
 
             <fieldset id="contactus">
             
